[gd_scene load_steps=17 format=3 uid="uid://c0q1hpo66rhyb"]

[ext_resource type="Theme" uid="uid://cgudjne6cl7nl" path="res://main_menu.tres" id="1_3vhnt"]
[ext_resource type="Script" path="res://scripts/title_block.gd" id="2_cvs8e"]
[ext_resource type="Script" path="res://scripts/main_menu_ui.gd" id="2_jhrpc"]
[ext_resource type="Texture2D" uid="uid://luc52nust80n" path="res://art/junk/title_box.png" id="3_8365y"]
[ext_resource type="Texture2D" uid="uid://dw44np86218dw" path="res://art/ground_9.png" id="4_84xe0"]
[ext_resource type="Texture2D" uid="uid://c0hgpxt6bq0e6" path="res://art/stripes.png" id="5_wh7ar"]
[ext_resource type="Script" path="res://scripts/main_menu_parallax.gd" id="7_am0kl"]
[ext_resource type="Texture2D" uid="uid://cis2ij4gihs7i" path="res://art/bg.png" id="7_qf535"]
[ext_resource type="Texture2D" uid="uid://h2mqidhc37at" path="res://art/bg2.png" id="8_emrof"]
[ext_resource type="PackedScene" uid="uid://di3hmxxebnw6m" path="res://scenes/options_screen.tscn" id="10_k2h8y"]
[ext_resource type="Script" path="res://scripts/ui/credits.gd" id="11_fbfl2"]
[ext_resource type="PackedScene" uid="uid://dqssjjf62lnxe" path="res://scenes/go_back.tscn" id="12_v18x7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j76jv"]
size = Vector2(296, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avyyk"]
size = Vector2(156, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20kjo"]
size = Vector2(212, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pew8i"]
size = Vector2(1000, 32)

[node name="MainMenu" type="Node2D"]

[node name="MainMenuWorld" type="Node2D" parent="."]

[node name="UI" type="MarginContainer" parent="MainMenuWorld"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 351.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_3vhnt")
theme_override_constants/margin_bottom = 16
script = ExtResource("2_jhrpc")

[node name="Buttons" type="VBoxContainer" parent="MainMenuWorld/UI"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 14

[node name="PlayButton" type="Button" parent="MainMenuWorld/UI/Buttons"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenuWorld/UI/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="CreditsButton" type="Button" parent="MainMenuWorld/UI/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Credits
"

[node name="ByLine" type="RichTextLabel" parent="MainMenuWorld/UI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/default_color = Color(0.89, 0.89, 0.89, 1)
theme_override_font_sizes/normal_font_size = 32
text = "a game jam game by Max Aller"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TitleBlock1" type="RigidBody2D" parent="MainMenuWorld"]
position = Vector2(544, -355)
rotation = -0.020944
script = ExtResource("2_cvs8e")
min_angle_deg = -45.0
max_angle_deg = 45.0

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenuWorld/TitleBlock1"]
offset_left = -148.0
offset_top = -61.0
scale = Vector2(2, 2)
texture = ExtResource("3_8365y")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuWorld/TitleBlock1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -20.0
offset_right = 41.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3vhnt")
theme_type_variation = &"Box"
text = "Handle"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuWorld/TitleBlock1"]
shape = SubResource("RectangleShape2D_j76jv")

[node name="TitleBlock2" type="RigidBody2D" parent="MainMenuWorld"]
position = Vector2(644, -202)
script = ExtResource("2_cvs8e")
min_angle_deg = -20.0
max_angle_deg = 20.0

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenuWorld/TitleBlock2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("3_8365y")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuWorld/TitleBlock2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -20.0
offset_right = 27.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3vhnt")
theme_type_variation = &"Box"
theme_override_font_sizes/normal_font_size = 48
text = "With"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuWorld/TitleBlock2"]
shape = SubResource("RectangleShape2D_avyyk")

[node name="TitleBlock3" type="RigidBody2D" parent="MainMenuWorld"]
position = Vector2(744, -66)
script = ExtResource("2_cvs8e")
min_angle_deg = -45.0
max_angle_deg = 45.0

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenuWorld/TitleBlock3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("3_8365y")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenuWorld/TitleBlock3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -20.0
offset_right = 26.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3vhnt")
theme_type_variation = &"Box"
text = "Care"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuWorld/TitleBlock3"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_20kjo")

[node name="Ground" type="StaticBody2D" parent="MainMenuWorld"]
z_index = 1
position = Vector2(582, 320)

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenuWorld/Ground"]
modulate = Color(0.81, 0.81, 0.81, 1)
custom_minimum_size = Vector2(57.475, 0)
offset_left = -500.0
offset_top = -16.0
offset_right = 500.0
offset_bottom = 16.0
texture = ExtResource("4_84xe0")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Stripes" type="Sprite2D" parent="MainMenuWorld/Ground"]
texture_repeat = 2
position = Vector2(-490, -13)
texture = ExtResource("5_wh7ar")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 980, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuWorld/Ground"]
shape = SubResource("RectangleShape2D_pew8i")

[node name="GroundMarker" type="Marker2D" parent="MainMenuWorld/Ground"]
unique_name_in_owner = true
position = Vector2(0, -16)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("7_am0kl")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.3, 0.3, 0.3, 1)
motion_scale = Vector2(0.75, 0.75)
motion_mirroring = Vector2(1024, 1024)

[node name="Fg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("8_emrof")
centered = false

[node name="Fg2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(0, 512)
texture = ExtResource("8_emrof")
centered = false

[node name="Fg3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(512, 0)
texture = ExtResource("8_emrof")
centered = false

[node name="Fg4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(512, 512)
texture = ExtResource("8_emrof")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.3, 0.3, 0.3, 1)
motion_mirroring = Vector2(1024, 1024)

[node name="Fg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("7_qf535")
centered = false

[node name="Fg2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(0, 512)
texture = ExtResource("7_qf535")
centered = false

[node name="Fg3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(512, 0)
texture = ExtResource("7_qf535")
centered = false

[node name="Fg4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(512, 512)
texture = ExtResource("7_qf535")
centered = false

[node name="OptionsWorld" parent="." instance=ExtResource("10_k2h8y")]
unique_name_in_owner = true
visible = false

[node name="CreditsWorld" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3vhnt")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("11_fbfl2")

[node name="Title" type="RichTextLabel" parent="CreditsWorld"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"Title"
text = "Credits"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsWorld"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Max" type="Label" parent="CreditsWorld/VBoxContainer"]
layout_mode = 2
text = "Game concept, design, art, implementation by Max Aller."

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsWorld/VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="CreditsWorld/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music by OceanKing via pixabay:"

[node name="LinkButton" type="LinkButton" parent="CreditsWorld/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Source"
uri = "https://pixabay.com/users/oceanking-44601375/"

[node name="Disclaimer" type="Label" parent="CreditsWorld/VBoxContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
text = "The Amazon smile logo appearing in this game is a trademark of Amazon.com, Inc. This game is not affiliated with, endorsed, sponsored, or specifically approved by Amazon.com, Inc. All product and company names are trademarks™ or registered® trademarks of their respective holders. Use of them does not imply any affiliation with or endorsement by them."
autowrap_mode = 3

[node name="GoBack" parent="CreditsWorld" instance=ExtResource("12_v18x7")]
layout_mode = 2
